--- a/login.html
+++ b/login.html
@@ -22,7 +22,7 @@
     var passdecrypt =   CryptoJS.AES.decrypt(password, "randompass");
     var user = userdecrypt.toString(CryptoJS.enc.Utf8);
     var pass = passdecrypt.toString(CryptoJS.enc.Utf8);
-    if (user=="andy") && (pass=="qwertyuiop"){
+    if (user=="andy" && pass=="qwertyuiop"){
       console.log(user,pass);
       window.location='target.html';
     }
