--- a/target.html
+++ b/target.html
@@ -5,6 +5,14 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/3.1.2/rollups/aes.js" integrity="sha256-/H4YS+7aYb9kJ5OKhFYPUjSJdrtV6AeyJOtTkw6X72o=" crossorigin="anonymous"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script language="javascript">
+  function getCookie(name)
+  {
+    let value = `; ${document.cookie}`;
+    let parts = value.split(`; ${name}=`);
+    console.log(value);
+    if (parts.length === 2) return parts.pop().split(';').shift();
+
+  }
   function get()
   {
     var username = getCookie("username");
