--- a/login.html
+++ b/login.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <title>Login Page</title>
+  <link rel="stylesheet" href="css/login-page.css">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/3.1.2/rollups/aes.js" integrity="sha256-/H4YS+7aYb9kJ5OKhFYPUjSJdrtV6AeyJOtTkw6X72o=" crossorigin="anonymous"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="js/login-page.js"></script>
@@ -9,19 +10,19 @@
 
 <body onload=get()>
 <form >
+  <div class="center">
   <label for="Username">Username</label>
-  <input type="text" name="username" id="username" >
+  <input type="text" name="username" id="username" required>
   <br>
 
   <label for="password">Password</label>
-  <input type="password" name="password" id="password" >
+  <input type="password" name="password" id="password" required>
   <br>
 
   <input type="checkbox" name="remember" id="check">
   <label for="Remember">Remember Me</label>
 
-  <div class="center">
-    <input type="button" onclick="validate(this.form)" value="Login"/>
+  <button type="submit" onclick="validate(this.form)">Login</button>
   </div>
 </form>
 </body>
