--- a/target.html
+++ b/target.html
@@ -20,7 +20,7 @@
 //     var userdecrypt =   CryptoJS.AES.decrypt(username, "randompass");
 //     var user = userdecrypt.toString(CryptoJS.enc.Utf8);
     console.log(username);
-    document.getElementById("welcome").innerHTML = "Welcome Back "+username+"!";
+    document.getElementById("welcome").innerHTML = "Welcome Back, "+username+"!";
 
   }
   </script>
