--- a/login.html
+++ b/login.html
@@ -1,7 +1,7 @@
 <!DOCTYPE  html>
 <html>
 <head>
-  <title>Web Design</title>
+  <title>Login</title>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/3.1.2/rollups/aes.js" integrity="sha256-/H4YS+7aYb9kJ5OKhFYPUjSJdrtV6AeyJOtTkw6X72o=" crossorigin="anonymous"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script language="javascript">
