--- a/login.html
+++ b/login.html
@@ -2,6 +2,8 @@
 <html>
 <head>
   <title>Login</title>
+  <link rel="stylesheet" href="css/login-page.css">
+  <link href="https://fonts.googleapis.com/css?family=Poppins:400,600" rel="stylesheet">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/3.1.2/rollups/aes.js" integrity="sha256-/H4YS+7aYb9kJ5OKhFYPUjSJdrtV6AeyJOtTkw6X72o=" crossorigin="anonymous"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script language="javascript">
@@ -52,10 +54,12 @@
 
  </head>
  <body onload=get()>
- <form >
+<div class="container">
+ <form>
+      <div class='name'>
       <label for="Username">Username</label>
       <input type="text" name="username" id="username" >
-      <br>
+    </div>
 
       <label for="password">Password</label>
       <input type="password" name="password" id="password" >
@@ -64,21 +68,11 @@
       <input type="checkbox" name="remember" id="check">
       <label for="Remember">Remember Me</label>
 
-
-      <style>
-        .center {
-          width: auto;
-          padding: 5px 80px;
-          margin: 10px 5px;
-          color: white;
-
-      }
-      </style>
       <div class="center">
-        <input type="button" onclick="validate(this.form)" value="Login"/>
+        <button type="button" onclick="validate(this.form)" value="Login"/>Login</button>
       </div>
       </form>
-
+</div>
 
 </body>
 </html>
